Finished data cleaning

--- a/website/index.html
+++ b/website/index.html
@@ -267,9 +267,17 @@ window.Quarto = {
 </nav>
 <div id="quarto-sidebar-glass" class="quarto-sidebar-collapse-item" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item"></div>
 <!-- margin-sidebar -->
-    
+    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">On this page</h2>
+   
+  <ul>
+  <li><a href="#home" id="toc-home" class="nav-link active" data-scroll-target="#home">Home</a></li>
+  </ul>
+</nav>
+    </div>
 <!-- main -->
-<main class="content column-page-right" id="quarto-document-content">
+<main class="content column-body" id="quarto-document-content">
 
 
 
@@ -298,12 +306,32 @@ CSCI 5622
 </div>
 <div id="listing-listings" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1707518031689" data-listing-reading-time-sort="3" data-listing-word-count-sort="524">
+<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1707618876096" data-listing-reading-time-sort="3" data-listing-word-count-sort="476">
+<a href="./data.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title" data-anchor-id="home">
+Data Prep / EDA
+</h5>
+<div class="card-text listing-description">
+Where the data source, processing, and visualization (EDA) is presented.
+</div>
+<div class="card-attribution card-text-small start">
+<div class="listing-author">
+
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1707518031689" data-listing-reading-time-sort="3" data-listing-word-count-sort="524">
 <a href="./intro.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="images/amazon_screenshot.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
 <div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title" data-anchor-id="home">
+<h5 class="no-anchor card-title listing-title">
 Introduction
 </h5>
 <div class="card-text listing-description">
@@ -318,7 +346,27 @@ In today’s digital landscape dominated by e-commerce giants such as Amazon, th
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1707511587984" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="2" data-listing-file-modified-sort="1707516080609" data-listing-reading-time-sort="1" data-listing-word-count-sort="3">
+<a href="./conclusions.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+Conclusions
+</h5>
+<div class="card-text listing-description">
+Placeholder
+</div>
+<div class="card-attribution card-text-small start">
+<div class="listing-author">
+
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="3" data-listing-file-modified-sort="1707511587984" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./models/clustering.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -338,67 +386,7 @@ Placeholder
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="2" data-listing-file-modified-sort="1707509403196" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
-<a href="./models/bayes.html" class="quarto-grid-link">
-<div class="quarto-grid-item card h-100 card-left">
-<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
-<div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title">
-Naive Bayes
-</h5>
-<div class="card-text listing-description">
-Placeholder
-</div>
-<div class="card-attribution card-text-small start">
-<div class="listing-author">
-
-</div>
-</div>
-</div>
-</div>
-</a>
-</div>
-<div class="g-col-1" data-index="3" data-listing-file-modified-sort="1707509366847" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
-<a href="./models/arm.html" class="quarto-grid-link">
-<div class="quarto-grid-item card h-100 card-left">
-<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
-<div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title">
-ARM (Association Rule Mining)
-</h5>
-<div class="card-text listing-description">
-Placeholder
-</div>
-<div class="card-attribution card-text-small start">
-<div class="listing-author">
-
-</div>
-</div>
-</div>
-</div>
-</a>
-</div>
-<div class="g-col-1" data-index="4" data-listing-file-modified-sort="1707509449552" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
-<a href="./models/svm.html" class="quarto-grid-link">
-<div class="quarto-grid-item card h-100 card-left">
-<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
-<div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title">
-SVM (Support Vector Machine)
-</h5>
-<div class="card-text listing-description">
-Placeholder
-</div>
-<div class="card-attribution card-text-small start">
-<div class="listing-author">
-
-</div>
-</div>
-</div>
-</div>
-</a>
-</div>
-<div class="g-col-1" data-index="5" data-listing-file-modified-sort="1707509478114" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="4" data-listing-file-modified-sort="1707509478114" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./models/nn.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -418,13 +406,33 @@ Placeholder
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="6" data-listing-file-modified-sort="1707509463516" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="5" data-listing-file-modified-sort="1707509463516" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./models/regression.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
 Regression
+</h5>
+<div class="card-text listing-description">
+Placeholder
+</div>
+<div class="card-attribution card-text-small start">
+<div class="listing-author">
+
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="6" data-listing-file-modified-sort="1707509449552" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<a href="./models/svm.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+SVM (Support Vector Machine)
 </h5>
 <div class="card-text listing-description">
 Placeholder
@@ -458,13 +466,13 @@ Placeholder
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="8" data-listing-file-modified-sort="1707516080609" data-listing-reading-time-sort="1" data-listing-word-count-sort="3">
-<a href="./conclusions.html" class="quarto-grid-link">
+<div class="g-col-1" data-index="8" data-listing-file-modified-sort="1707509403196" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<a href="./models/bayes.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
-Conclusions
+Naive Bayes
 </h5>
 <div class="card-text listing-description">
 Placeholder
@@ -478,16 +486,16 @@ Placeholder
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="9" data-listing-file-modified-sort="1707508775226" data-listing-reading-time-sort="1" data-listing-word-count-sort="60">
-<a href="./data.html" class="quarto-grid-link">
+<div class="g-col-1" data-index="9" data-listing-file-modified-sort="1707509366847" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<a href="./models/arm.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
-Data Prep / EDA
+ARM (Association Rule Mining)
 </h5>
 <div class="card-text listing-description">
-Where the data source, processing, and visualization (EDA) is presented.
+Placeholder
 </div>
 <div class="card-attribution card-text-small start">
 <div class="listing-author">
@@ -896,7 +904,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   }
 });
 </script>
-<nav class="page-navigation column-page-right">
+<nav class="page-navigation column-body">
   <div class="nav-page nav-page-previous">
   </div>
   <div class="nav-page nav-page-next">
