--- a/website/models/arm.html
+++ b/website/models/arm.html
@@ -208,9 +208,17 @@ ul.task-list li input[type="checkbox"] {
 </nav>
 <div id="quarto-sidebar-glass" class="quarto-sidebar-collapse-item" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item"></div>
 <!-- margin-sidebar -->
-    
+    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">On this page</h2>
+   
+  <ul>
+  <li><a href="#arm-association-rule-mining" id="toc-arm-association-rule-mining" class="nav-link active" data-scroll-target="#arm-association-rule-mining">ARM (Association Rule Mining)</a></li>
+  </ul>
+</nav>
+    </div>
 <!-- main -->
-<main class="content column-page-right" id="quarto-document-content">
+<main class="content column-body" id="quarto-document-content">
 
 
 
@@ -610,7 +618,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   }
 });
 </script>
-<nav class="page-navigation column-page-right">
+<nav class="page-navigation column-body">
   <div class="nav-page nav-page-previous">
       <a href="../data.html" class="pagination-link  aria-label=" data="" prep="" eda"="">
         <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text">Data Prep / EDA</span>
