--- a/website/index.html
+++ b/website/index.html
@@ -306,10 +306,10 @@ CSCI 5622
 </div>
 <div id="listing-listings" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1707618876096" data-listing-reading-time-sort="3" data-listing-word-count-sort="476">
+<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1707718882479" data-listing-reading-time-sort="5" data-listing-word-count-sort="943">
 <a href="./data.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
-<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
+<p class="card-img-top"><img src="data_files/figure-html/fig-starreview-output-1.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title" data-anchor-id="home">
 Data Prep / EDA
