--- a/website/index.html
+++ b/website/index.html
@@ -306,10 +306,10 @@ CSCI 5622
 </div>
 <div id="listing-listings" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1707723301708" data-listing-reading-time-sort="6" data-listing-word-count-sort="1132">
+<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1707730014649" data-listing-reading-time-sort="7" data-listing-word-count-sort="1241">
 <a href="./data.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
-<p class="card-img-top"><img src="data_files/figure-html/fig-starreview-output-1.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<p class="card-img-top"><img src="images/violin_bim.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title" data-anchor-id="home">
 Data Prep / EDA
