--- a/website/intro.html
+++ b/website/intro.html
@@ -175,12 +175,6 @@ div.csl-indent {
       <ul id="quarto-sidebar-section-1" class="collapse list-unstyled sidebar-section depth1 show">  
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./models/arm.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">ARM (Association Rule Mining)</span></a>
-  </div>
-</li>
-          <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
   <a href="./models/bayes.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">Naive Bayes</span></a>
   </div>
@@ -201,6 +195,12 @@ div.csl-indent {
   <div class="sidebar-item-container"> 
   <a href="./models/nn.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">Neural Networks</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./models/pca.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">PCA and SVD</span></a>
   </div>
 </li>
           <li class="sidebar-item">
@@ -263,6 +263,20 @@ div.csl-indent {
 </div>
 </div>
 <p>At its core, this endeavor resonates with a diverse array of stakeholders, each with a vested interest in deciphering the underlying patterns shaping modern consumption patterns and economic dynamics. Consumers, for instance, stand to benefit from the insights gleaned through data analysis, which can translate into more personalized shopping experiences, enhanced product recommendations, and greater transparency within the marketplace. Much work has been done, for example, to improve search engine results and product classification for recommendation purposes <span class="citation" data-cites="MediniAmazon BrentRecommender">(<a href="#ref-MediniAmazon" role="doc-biblioref">Medini et al. 2019</a>; <a href="#ref-BrentRecommender" role="doc-biblioref">Smith and Linden 2017</a>)</span>. Marketers, on the other hand, find in this data a treasure trove of actionable intelligence, enabling them to fine-tune advertising strategies, optimize pricing models, and anticipate shifts in consumer preferences with a heightened degree of accuracy <span class="citation" data-cites="ChenPricing ChevalierPrice">(<a href="#ref-ChenPricing" role="doc-biblioref">Chen, Mislove, and Wilson 2016</a>; <a href="#ref-ChevalierPrice" role="doc-biblioref">Chevalier and Goolsbee 2003</a>)</span>. Furthermore, researchers across various disciplines are drawn to the rich dataset offered by Amazon, utilizing sophisticated analytical techniques ranging from machine learning algorithms to traditional statistical methods to unravel the complexities of consumer behavior and product relationships <span class="citation" data-cites="ShakilaRecommender BellVis">(<a href="#ref-ShakilaRecommender" role="doc-biblioref">Shaikh, Rathi, and Janrao 2017</a>; <a href="#ref-BellVis" role="doc-biblioref">Bell and Bala 2015</a>)</span>. Despite the considerable strides made in this field, there remains an abundance of untapped potential, beckoning further exploration and innovation to fully harness the transformative power of Amazon’s retail product data.</p>
+<div class="columns">
+<div class="column" style="width:35%;">
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="images/ml_retail.jpg" class="img-fluid figure-img"></p>
+<figcaption>ML in retail</figcaption>
+</figure>
+</div>
+</div><div class="column" style="width:5%;">
+<!-- empty column to create gap -->
+</div><div class="column" style="width:60%;">
+<p>Lori Ipsum</p>
+</div>
+</div>
 <section id="questions-to-answer" class="level2">
 <h2 class="anchored" data-anchor-id="questions-to-answer">Questions to Answer</h2>
 <ol type="1">
