--- a/website/index.html
+++ b/website/index.html
@@ -214,12 +214,6 @@ window.Quarto = {
       <ul id="quarto-sidebar-section-1" class="collapse list-unstyled sidebar-section depth1 show">  
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./models/arm.html" class="sidebar-item-text sidebar-link">
- <span class="menu-text">ARM (Association Rule Mining)</span></a>
-  </div>
-</li>
-          <li class="sidebar-item">
-  <div class="sidebar-item-container"> 
   <a href="./models/bayes.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">Naive Bayes</span></a>
   </div>
@@ -240,6 +234,12 @@ window.Quarto = {
   <div class="sidebar-item-container"> 
   <a href="./models/nn.html" class="sidebar-item-text sidebar-link">
  <span class="menu-text">Neural Networks</span></a>
+  </div>
+</li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./models/pca.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">PCA and SVD</span></a>
   </div>
 </li>
           <li class="sidebar-item">
@@ -276,38 +276,25 @@ window.Quarto = {
 
 <section id="home" class="level1 unnumbered">
 <h1 class="unnumbered">Home</h1>
-<div class="callout callout-style-default callout-note callout-titled">
-<div class="callout-header d-flex align-content-center">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<div class="callout-title-container flex-fill">
-CSCI 5622
-</div>
-</div>
-<div class="callout-body-container callout-body">
-<p>By Bhavana Jonnalagadda</p>
-</div>
-</div>
 <div class="columns">
 <div class="column" style="width:60%;">
-<p>Welcome to the homepage for machine learning on Amazon retail product data! You can see all pages listed below, or use the navbar to navigate the pages.</p>
+<p>Welcome to the homepage for machine learning on Amazon retail product data, made by Bhavana Jonnalagadda! You can see all pages listed below, or use the navbar to navigate the pages.</p>
 </div><div class="column" style="width:30%;">
 <p><img src="images/cover.png" class="img-fluid"></p>
 </div>
 </div>
 <div id="listing-listings" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1707765916212" data-listing-reading-time-sort="11" data-listing-word-count-sort="2072">
-<a href="./data.html" class="quarto-grid-link">
+<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1709075345352" data-listing-reading-time-sort="4" data-listing-word-count-sort="747">
+<a href="./models/pca.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
-<p class="card-img-top"><img src="images/violin_bim.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<p class="card-img-top"><img src="images/pca_ex1.jpeg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title" data-anchor-id="home">
-Data Prep / EDA
+PCA and SVD
 </h5>
 <div class="card-text listing-description">
-Where the data source, processing, and visualization (EDA) is presented.
+Where Principal Component Analysis and Singular Value Decomposition are used, for dimensionality reduction and EDA.
 </div>
 <div class="card-attribution card-text-small start">
 <div class="listing-author">
@@ -318,7 +305,27 @@ Where the data source, processing, and visualization (EDA) is presented.
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1707518031689" data-listing-reading-time-sort="3" data-listing-word-count-sort="524">
+<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1709074677606" data-listing-reading-time-sort="1" data-listing-word-count-sort="195">
+<a href="./models/clustering.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+Clustering
+</h5>
+<div class="card-text listing-description">
+Clustering in order to discover patterns in the data.
+</div>
+<div class="card-attribution card-text-small start">
+<div class="listing-author">
+
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="2" data-listing-file-modified-sort="1708938756510" data-listing-reading-time-sort="3" data-listing-word-count-sort="540">
 <a href="./intro.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="images/amazon_screenshot.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -338,7 +345,27 @@ In today’s digital landscape dominated by e-commerce giants such as Amazon, th
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="2" data-listing-file-modified-sort="1707516080609" data-listing-reading-time-sort="1" data-listing-word-count-sort="3">
+<div class="g-col-1" data-index="3" data-listing-file-modified-sort="1707765916212" data-listing-reading-time-sort="11" data-listing-word-count-sort="2072">
+<a href="./data.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top"><img src="images/violin_bim.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+Data Prep / EDA
+</h5>
+<div class="card-text listing-description">
+Where the data source, processing, and visualization (EDA) is presented.
+</div>
+<div class="card-attribution card-text-small start">
+<div class="listing-author">
+
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="4" data-listing-file-modified-sort="1707516080609" data-listing-reading-time-sort="1" data-listing-word-count-sort="3">
 <a href="./conclusions.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -358,27 +385,7 @@ Placeholder
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="3" data-listing-file-modified-sort="1707511587984" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
-<a href="./models/clustering.html" class="quarto-grid-link">
-<div class="quarto-grid-item card h-100 card-left">
-<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
-<div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title">
-Clustering
-</h5>
-<div class="card-text listing-description">
-Placeholder
-</div>
-<div class="card-attribution card-text-small start">
-<div class="listing-author">
-
-</div>
-</div>
-</div>
-</div>
-</a>
-</div>
-<div class="g-col-1" data-index="4" data-listing-file-modified-sort="1707509478114" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="5" data-listing-file-modified-sort="1707509478114" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./models/nn.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -398,7 +405,7 @@ Placeholder
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="5" data-listing-file-modified-sort="1707509463516" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="6" data-listing-file-modified-sort="1707509463516" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./models/regression.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -418,7 +425,7 @@ Placeholder
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="6" data-listing-file-modified-sort="1707509449552" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="7" data-listing-file-modified-sort="1707509449552" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./models/svm.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -438,7 +445,7 @@ Placeholder
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="7" data-listing-file-modified-sort="1707509431632" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="8" data-listing-file-modified-sort="1707509431632" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./models/dtrees.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -458,33 +465,13 @@ Placeholder
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="8" data-listing-file-modified-sort="1707509403196" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="9" data-listing-file-modified-sort="1707509403196" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./models/bayes.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
 Naive Bayes
-</h5>
-<div class="card-text listing-description">
-Placeholder
-</div>
-<div class="card-attribution card-text-small start">
-<div class="listing-author">
-
-</div>
-</div>
-</div>
-</div>
-</a>
-</div>
-<div class="g-col-1" data-index="9" data-listing-file-modified-sort="1707509366847" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
-<a href="./models/arm.html" class="quarto-grid-link">
-<div class="quarto-grid-item card h-100 card-left">
-<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
-<div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title">
-ARM (Association Rule Mining)
 </h5>
 <div class="card-text listing-description">
 Placeholder
