--- a/website/conclusions.html
+++ b/website/conclusions.html
@@ -262,11 +262,17 @@ Chevalier, Judith, and Austan Goolsbee. 2003. <span>“<span class="nocase">Meas
 <div id="ref-MediniAmazon" class="csl-entry" role="listitem">
 Medini, Tharun, Qixuan Huang, Yiqiu Wang, Vijai Mohan, and Anshumali Shrivastava. 2019. <span>“Extreme Classification in Log Memory Using Count-Min Sketch: <span>A</span> Case Study of Amazon Search with 50M Products.”</span> <em>CoRR</em> abs/1910.13830. <a href="http://arxiv.org/abs/1910.13830">http://arxiv.org/abs/1910.13830</a>.
 </div>
+<div id="ref-sklearn" class="csl-entry" role="listitem">
+Pedregosa, F., G. Varoquaux, A. Gramfort, V. Michel, B. Thirion, O. Grisel, M. Blondel, et al. 2011. <span>“Scikit-Learn: Machine Learning in <span>P</span>ython.”</span> <em>Journal of Machine Learning Research</em> 12: 2825–30.
+</div>
 <div id="ref-ShakilaRecommender" class="csl-entry" role="listitem">
 Shaikh, Shakila, Sheetal Rathi, and Prachi Janrao. 2017. <span>“Recommendation System in e-Commerce Websites: A Graph Based Approached.”</span> In <em>2017 IEEE 7th International Advance Computing Conference (IACC)</em>, 931–34. <a href="https://doi.org/10.1109/IACC.2017.0189">https://doi.org/10.1109/IACC.2017.0189</a>.
 </div>
 <div id="ref-BrentRecommender" class="csl-entry" role="listitem">
 Smith, Brent, and Greg Linden. 2017. <span>“Two Decades of Recommender Systems at Amazon.com.”</span> <em>IEEE Internet Computing</em> 21 (3): 12–18. <a href="https://doi.org/10.1109/MIC.2017.72">https://doi.org/10.1109/MIC.2017.72</a>.
+</div>
+<div id="ref-kmodes" class="csl-entry" role="listitem">
+Vos, Nelis J. de. 2015--2024. <span>“Kmodes Categorical Clustering Library.”</span> <a href="https://github.com/nicodv/kmodes" class="uri">https://github.com/nicodv/kmodes</a>.
 </div>
 </div>
 
