--- a/website/index.html
+++ b/website/index.html
@@ -285,16 +285,16 @@ window.Quarto = {
 </div>
 <div id="listing-listings" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1709527777221" data-listing-reading-time-sort="5" data-listing-word-count-sort="998">
-<a href="./models/pca.html" class="quarto-grid-link">
+<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1713049961515" data-listing-reading-time-sort="3" data-listing-word-count-sort="449">
+<a href="./models/dtrees.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
-<p class="card-img-top"><img src="images/pca_ex1.jpeg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<p class="card-img-top"><img src="images/dt_1.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title" data-anchor-id="home">
-PCA and SVD
+Decision Trees
 </h5>
 <div class="card-text listing-description">
-Where Principal Component Analysis and Singular Value Decomposition are used, for dimensionality reduction and EDA.
+Decision trees are a popular supervised learning algorithm used for both classification and regression tasks in machine learning. They are tree-like structures where each…
 </div>
 <div class="card-attribution card-text-small start">
 <div class="listing-author">
@@ -305,16 +305,16 @@ Where Principal Component Analysis and Singular Value Decomposition are used, fo
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1709524287116" data-listing-reading-time-sort="4" data-listing-word-count-sort="616">
-<a href="./models/clustering.html" class="quarto-grid-link">
+<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1713049955707" data-listing-reading-time-sort="2" data-listing-word-count-sort="334">
+<a href="./models/bayes.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
-<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
+<p class="card-img-top"><img src="images/nb.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
-Clustering
+Naive Bayes
 </h5>
 <div class="card-text listing-description">
-Clustering in order to discover patterns in the data.
+Naive Bayes is a popular and simple probabilistic machine learning algorithm based on Bayes’ theorem. It is commonly used for classification tasks, such as spam email…
 </div>
 <div class="card-attribution card-text-small start">
 <div class="listing-author">
@@ -325,27 +325,7 @@ Clustering in order to discover patterns in the data.
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="2" data-listing-file-modified-sort="1709162661000" data-listing-reading-time-sort="11" data-listing-word-count-sort="2077">
-<a href="./data.html" class="quarto-grid-link">
-<div class="quarto-grid-item card h-100 card-left">
-<p class="card-img-top"><img src="images/violin_bim.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
-<div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title">
-Data Prep / EDA
-</h5>
-<div class="card-text listing-description">
-Where the data source, processing, and visualization (EDA) is presented.
-</div>
-<div class="card-attribution card-text-small start">
-<div class="listing-author">
-
-</div>
-</div>
-</div>
-</div>
-</a>
-</div>
-<div class="g-col-1" data-index="3" data-listing-file-modified-sort="1709150824000" data-listing-reading-time-sort="4" data-listing-word-count-sort="670">
+<div class="g-col-1" data-index="2" data-listing-file-modified-sort="1713045751667" data-listing-reading-time-sort="5" data-listing-word-count-sort="891">
 <a href="./intro.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="images/amazon_screenshot.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -365,7 +345,67 @@ In today’s digital landscape dominated by e-commerce giants such as Amazon, th
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="4" data-listing-file-modified-sort="1707516080609" data-listing-reading-time-sort="1" data-listing-word-count-sort="3">
+<div class="g-col-1" data-index="3" data-listing-file-modified-sort="1709527777221" data-listing-reading-time-sort="5" data-listing-word-count-sort="998">
+<a href="./models/pca.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top"><img src="images/pca_ex1.jpeg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+PCA and SVD
+</h5>
+<div class="card-text listing-description">
+Where Principal Component Analysis and Singular Value Decomposition are used, for dimensionality reduction and EDA.
+</div>
+<div class="card-attribution card-text-small start">
+<div class="listing-author">
+
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="4" data-listing-file-modified-sort="1709524287116" data-listing-reading-time-sort="4" data-listing-word-count-sort="616">
+<a href="./models/clustering.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+Clustering
+</h5>
+<div class="card-text listing-description">
+Clustering in order to discover patterns in the data.
+</div>
+<div class="card-attribution card-text-small start">
+<div class="listing-author">
+
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="5" data-listing-file-modified-sort="1709162661000" data-listing-reading-time-sort="11" data-listing-word-count-sort="2077">
+<a href="./data.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top"><img src="images/violin_bim.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+Data Prep / EDA
+</h5>
+<div class="card-text listing-description">
+Where the data source, processing, and visualization (EDA) is presented.
+</div>
+<div class="card-attribution card-text-small start">
+<div class="listing-author">
+
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="6" data-listing-file-modified-sort="1707516080609" data-listing-reading-time-sort="1" data-listing-word-count-sort="3">
 <a href="./conclusions.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -385,7 +425,7 @@ Placeholder
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="5" data-listing-file-modified-sort="1707509478114" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="7" data-listing-file-modified-sort="1707509478114" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./models/nn.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -405,7 +445,7 @@ Placeholder
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="6" data-listing-file-modified-sort="1707509463516" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="8" data-listing-file-modified-sort="1707509463516" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./models/regression.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
@@ -425,53 +465,13 @@ Placeholder
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="7" data-listing-file-modified-sort="1707509449552" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="g-col-1" data-index="9" data-listing-file-modified-sort="1707509449552" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
 <a href="./models/svm.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title">
 SVM (Support Vector Machine)
-</h5>
-<div class="card-text listing-description">
-Placeholder
-</div>
-<div class="card-attribution card-text-small start">
-<div class="listing-author">
-
-</div>
-</div>
-</div>
-</div>
-</a>
-</div>
-<div class="g-col-1" data-index="8" data-listing-file-modified-sort="1707509431632" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
-<a href="./models/dtrees.html" class="quarto-grid-link">
-<div class="quarto-grid-item card h-100 card-left">
-<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
-<div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title">
-Decision Trees
-</h5>
-<div class="card-text listing-description">
-Placeholder
-</div>
-<div class="card-attribution card-text-small start">
-<div class="listing-author">
-
-</div>
-</div>
-</div>
-</div>
-</a>
-</div>
-<div class="g-col-1" data-index="9" data-listing-file-modified-sort="1707509403196" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
-<a href="./models/bayes.html" class="quarto-grid-link">
-<div class="quarto-grid-item card h-100 card-left">
-<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
-<div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title">
-Naive Bayes
 </h5>
 <div class="card-text listing-description">
 Placeholder
